# retail-analytics-copilot

./: .gitignore  README.md  RESULTS.md  create_fewshot_module.py  fix_dates.py  generate_graph_image.py  outputs_hybrid.jsonl  pyproject.toml  requirements.txt  run_agent_hybrid.py  sample_questions_hybrid_eval.jsonl
agent/: dspy_signatures.py  graph_hybrid.py  optimized_sql_module.json  output_parser.py
agent/rag/: retrieval.py
agent/tools/: sqlite_tool.py
assets/: graph_architecture.mmd
docs/: kpi_definitions.md  marketing_calendar.md
scripts/: create_fewshot_module.py  debug.py  fix_dates.py  generate_graph_image.py
